# ---------------------------------------------------------------------
# CMakeLists.txt file.
# CMake configuration & compilation
# Minimum version 2.8 needed for this project.
# ---------------------------------------------------------------------
cmake_minimum_required(VERSION 2.8)
project(SnowballRun)

# The source files are packed in `src` folder
add_subdirectory(src)
