# ---------------------------------------------------------------------
# CMakeLists.txt file.
# CMake configuration & compilation
# Minimum version 3.0 needed for this project.
# ---------------------------------------------------------------------
cmake_minimum_required(VERSION 3.0)
project(SnowballRun)

# The source files are packed in `src` folder
add_subdirectory(src)
